# sigmatch

./: Cargo.toml  LICENSE.txt  README.md
examples/: demo.rs
src/: error.rs  lib.rs  str.rs
