[package]
name = "sigmatch"
version = "0.2.1"
edition = "2021"
description = "A memory signature search library for the Windows platform written in Rust."
keywords = ["signature", "sigmatch", "sig", "pattern", "sigsearch"]
readme = "README.md"
categories = ["os::windows-apis"]
documentation = "https://docs.rs/sigmatch"
repository = "https://github.com/piz-ewing/sigmatch"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
memoffset = "0.9"
regex = "1.10"
custom_debug = "0.6.2"
log="0.4.27"

[dependencies.windows]
version = "0"
features = [
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
]

[[example]]
name = "demo"

[dev-dependencies]
pretty_env_logger = "0.5.0"
